added feature documents
